infrastructure/istio-gateway/overlays/lab-clusters/cyso-pdv/public-gateway.yaml
# Be aware that for *.platform-dienstverlening.nl you will need to create an additional Gateway resource for this domain! 
# The reason is that hostname: "*.<sub>.platform-dienstverlening.nl" will otherwise overlap with hostname: "*.fieldlab.platform-dienstverlening.nl"
# This is not allowed as per Gateway API rules and will cause the Gateway to be rejected. 
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
  - name: https-fieldlab
    port: 443
    protocol: HTTPS
    hostname: "*.fieldlab.platform-dienstverlening.nl"
    tls:
      mode: Terminate
      certificateRefs:
        - name: "fieldlab-platform-dienstverlening-nl-wildcard-tls"
          kind: Secret
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
